parse-display/tests/compile_fail/display/struct_no_pointer_field.rs
use parse_display::Display;

#[derive(Display)]
#[display("{x:p}")]
struct TestStruct {
    x: u32,
}

fn main() {}
